# 20th_intern_CHOISEYOUNG

./: README.md
C++&Qt/day1/hw2/hw2_package/: CMakeLists.txt
C++&Qt/day1/hw2/hw2_package/include/cpp_test/: hw_2.hpp
C++&Qt/day1/hw2/hw2_package/src/: hw_2.cpp
C++&Qt/day4/hw1/hw1_package/: CMakeLists.txt
Opencv/day1/hw1/: CMakeLists.txt  package.xml
Opencv/day1/hw1/hw1_package/include/hw1/: hw1.hpp
Opencv/day1/hw1/hw1_package/src/: hw1.cpp
Opencv/day1/hw1/src/: hw1.cpp
Opencv/day1/hw2/: README.md
Opencv/day1/hw2/hw2_package/: CMakeLists.txt  package.xml
Opencv/day1/hw2/hw2_package/include/hw2_package/: server.hpp
Opencv/day1/hw2/hw2_package/src/: client.cpp  hw2.cpp  server.cpp
linux/day1/hw1/: hw1.docx
